Fix fixed background on iOS using position:fixed div
Replace background-attachment:fixed on body (broken on iOS Safari)
with a position:fixed div at z-index:-1, which works correctly
on all browsers including iOS.

--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,21 @@ body {
   font-family: 'Lora', Georgia, serif;
   color: #5a5a5a;
   background-color: #1a1510;
-  background-image: url('../images/gallery/gallery-bw-dancing.jpeg');
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: center 60%;
   line-height: 1.8;
   -webkit-font-smoothing: antialiased;
+}
+
+.bg-fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-image: url('../images/gallery/gallery-bw-dancing.jpeg');
+  background-size: cover;
+  background-position: center 60%;
+  background-repeat: no-repeat;
 }
 
 img {
@@ -903,10 +912,6 @@ input[type="radio"] {
    Responsive
    ======================================== */
 @media (max-width: 768px) {
-  body {
-    background-attachment: scroll;
-  }
-
   .hero-names {
     font-size: 2.8rem;
   }
